# iroh-webproxy

./: Cargo.toml  Makefile  README.md
iroh-webproxy-tray/: Cargo.toml  build.rs
iroh-webproxy-tray/resources/: app.manifest
iroh-webproxy-tray/src/: app.rs  login_item.rs  main.rs  preferences.rs  proxy_manager.rs  settings.rs
irohWebProxy/: Info.plist  Makefile  Package.swift
irohWebProxy/Sources/irohWebProxy/: AppDelegate.swift  LoginItemManager.swift  PreferencesWindow.swift  ProxyManager.swift  Settings.swift
irohWebProxy/scripts/: configure-dmg.applescript
src/: client.rs  main.rs  server.rs  tls.rs  transport.rs
