[package]
name = "iroh-webproxy"
version = "0.1.0"
edition = "2021"
description = "HTTP/HTTPS web proxy over iroh QUIC tunnels"
license = "MIT OR Apache-2.0"

[[bin]]
name = "iroh-webproxy"
path = "src/main.rs"

[dependencies]
iroh = "0.96"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
rand = "0.9"
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rcgen = "0.14"
rustls-pki-types = "1"
rustls-pemfile = "2"
hickory-resolver = { version = "0.25", features = ["tokio", "system-config"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
